fixed dark mode bug

--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -198,6 +198,6 @@ input:checked + .slider:before {
 
 .header-bar {
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
 }
